comiteando como un campeon

--- a/app/src/main/res/layout/activity_penaltys.xml
+++ b/app/src/main/res/layout/activity_penaltys.xml
@@ -10,7 +10,7 @@
     android:id="@+id/layout_Mayor"
     android:weightSum="1"
     android:orientation="vertical"
-    android:background="@drawable/zz">
+    android:background="@drawable/penal">
 
 
     <LinearLayout
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:text="Carga sin Pelota"
                 android:id="@+id/rbCargaSinPelota"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:text="Derrumbe de Maul"
                 android:id="@+id/brDerrumbe"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:text="Entrada por el costado "
                 android:id="@+id/rbEntradaDeCostado"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -99,7 +99,7 @@
                 android:layout_height="wrap_content"
                 android:text="Inconducta"
                 android:id="@+id/rbInconducta"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -119,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:text="Carga indebida en Line"
                 android:id="@+id/rbLine"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -139,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:text="Manos en el ruck"
                 android:id="@+id/rbManos"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -159,7 +159,7 @@
                 android:layout_height="wrap_content"
                 android:text="Off Side"
                 android:id="@+id/rbOffSide"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -179,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:text="Scrum"
                 android:id="@+id/rbScrum"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -199,7 +199,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tackle Alto"
                 android:id="@+id/rbTackleAlto"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -219,7 +219,7 @@
                 android:layout_height="wrap_content"
                 android:text="Retención"
                 android:id="@+id/rbRetener"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -239,7 +239,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tirarse en el Ruck"
                 android:id="@+id/rbTirarseEnElRuck"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -261,7 +261,7 @@
                 android:id="@+id/rbTacleadorNoLibera"
                 android:checked="false"
                 android:textSize="@dimen/abc_text_size_medium_material"
-                android:textColor="#ff0f2013"
+                android:textColor="#ffffffff"
                 android:textColorHighlight="#ff4c3dff"
                 android:textColorLink="#ff2928ff"
                 android:textStyle="normal|bold|italic"
