--- a/app/src/main/res/layout/activity_lines_out.xml
+++ b/app/src/main/res/layout/activity_lines_out.xml
@@ -5,7 +5,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.holamundo.alejandro.alejandro123.LineActivity">
+    tools:context="com.holamundo.alejandro.alejandro123.LineActivity"
+    android:background="@drawable/lienout">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -44,7 +45,7 @@
                     android:id="@+id/rbLineFAvorGanado"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="3.67"
-                    android:textColor="#ff088019"
+                    android:textColor="#ffffffff"
                     android:checked="false"
                     android:shadowColor="@android:color/holo_green_light" />
 
@@ -55,7 +56,7 @@
                     android:id="@+id/rbLineFAvorPerdido"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1.97"
-                    android:textColor="#ff860712" />
+                    android:textColor="#ffffffff" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
@@ -63,7 +64,7 @@
                     android:text="Pelota Parcial"
                     android:id="@+id/rbLineFAvorPelotaParcial"
                     android:layout_weight="2.61"
-                    android:textColor="#ff090fa3" />
+                    android:textColor="#ffffffff" />
 
             </RadioGroup>
 
@@ -130,7 +131,7 @@
                     android:layout_height="wrap_content"
                     android:text="Robado"
                     android:id="@+id/rbLineContraRobado"
-                    android:textColor="#ff088019"
+                    android:textColor="#ffffffff"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.49" />
 
@@ -139,7 +140,7 @@
                     android:layout_height="wrap_content"
                     android:text="Perdido"
                     android:id="@+id/rbLineContraPerdido"
-                    android:textColor="#ff860712"
+                    android:textColor="#ffffffff"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.35" />
 
@@ -148,7 +149,7 @@
                     android:layout_height="wrap_content"
                     android:text="Pelota Parcial"
                     android:id="@+id/rbLineContraPelotaParcial"
-                    android:textColor="#ff090fa3" />
+                    android:textColor="#ffffffff" />
 
             </RadioGroup>
 
