--- a/app/src/main/res/layout/activity_scrum.xml
+++ b/app/src/main/res/layout/activity_scrum.xml
@@ -4,8 +4,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.holamundo.alejandro.alejandro123.ScrumActivity">
-
+    tools:context="com.holamundo.alejandro.alejandro123.ScrumActivity"
+    android:background="@drawable/scrum">
+    <AbsoluteLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,7 +29,8 @@
                 android:text="Scrum a Favor"
                 android:id="@+id/rbScrumAFavor"
                 android:layout_gravity="center_horizontal"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textColor="#ffffffff" />
 
             <RadioGroup
                 android:layout_width="match_parent"
@@ -41,7 +45,7 @@
                     android:id="@+id/rbScrumAFavorGanado"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="3.67"
-                    android:textColor="#ff088019"
+                    android:textColor="#ffffffff"
                     android:checked="false" />
 
                 <RadioButton
@@ -51,7 +55,7 @@
                     android:id="@+id/rbSrcumAfavorPerdido"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="1.97"
-                    android:textColor="#ff860712" />
+                    android:textColor="#ffffffff" />
 
                 <RadioButton
                     android:layout_width="wrap_content"
@@ -59,7 +63,7 @@
                     android:text="Reseteado"
                     android:id="@+id/rbScrumAFavorReseteado"
                     android:layout_weight="2.61"
-                    android:textColor="#ff090fa3" />
+                    android:textColor="#ffffffff" />
 
             </RadioGroup>
 
@@ -108,7 +112,8 @@
                 android:id="@+id/rbScrumenContra"
                 android:layout_gravity="center"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-                android:checked="false" />
+                android:checked="false"
+                android:textColor="#ffffffff" />
 
             <RadioGroup
                 android:layout_width="match_parent"
@@ -122,7 +127,7 @@
                     android:layout_height="wrap_content"
                     android:text="Robado"
                     android:id="@+id/rbScrumEnContraRobado"
-                    android:textColor="#ff088019"
+                    android:textColor="#ffffffff"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.49" />
 
@@ -131,7 +136,7 @@
                     android:layout_height="wrap_content"
                     android:text="Perdido"
                     android:id="@+id/rbScrumEncontraPerdido"
-                    android:textColor="#ff860712"
+                    android:textColor="#ffffffff"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.35" />
 
@@ -140,7 +145,7 @@
                     android:layout_height="wrap_content"
                     android:text="Reseteado"
                     android:id="@+id/rbScrumEnContraReseteado"
-                    android:textColor="#ff090fa3" />
+                    android:textColor="#ffffffff" />
 
             </RadioGroup>
 
@@ -221,5 +226,5 @@
         </RadioGroup>
 
     </FrameLayout>
-
+    </AbsoluteLayout>
 </RelativeLayout>
